@@ -49,6 +49,7 @@ Experiment-related commands
 .. autofunction:: Remark
 .. autofunction:: LogEntry
 .. autofunction:: LogAttach
+.. autofunction:: Remember
 .. autofunction:: FinishExperiment
 
 Script-related commands
