@@ -87,6 +87,8 @@ Changelog for NICOS 2
   - Fixed devices now don't raise an exception on moving, but only warn that
     they will not move.
 
+  - New command: "Remember()"
+
 **Release 2.0.1**
 
   - In "ImageStorage", made sure the data file isn't overwritten unless
